--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@fastify/jwt": "^8.0.0",
     "@prisma/client": "^5.12.1",
     "@types/node": "^20.12.7",
     "fastify": "^4.26.2",
@@ -20,5 +21,8 @@
     "typescript": "^5.4.5",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.22.5"
+  },
+  "devDependencies": {
+    "@types/fastify-jwt": "^0.8.1"
   }
 }
