--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.22.3",
+    "sass": "^1.75.0",
     "sort-by": "^1.2.0",
     "universal-cookie": "^7.1.4"
   },
