--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,12 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cookie": "^9.3.1",
     "@fastify/cors": "^9.0.1",
     "@fastify/jwt": "^8.0.0",
     "@prisma/client": "^5.12.1",
     "@types/node": "^20.12.7",
     "fastify": "^4.26.2",
-    "fastify-jwt": "^4.2.0",
     "fastify-zod": "^1.4.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5",
@@ -23,6 +23,7 @@
     "zod-to-json-schema": "^3.22.5"
   },
   "devDependencies": {
-    "@types/fastify-jwt": "^0.8.1"
+    "@types/fastify-jwt": "^0.8.1",
+    "prisma": "^5.13.0"
   }
 }
